* Removed the need for agents_global_table - now each agent knows only about himself. * Setup a separate mail box for each two agents comunication.